feat: авторизация, регистрация, security config, jwt токены

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 spring.application.name=blps
+# Connection to pg
 spring.datasource.url=jdbc:postgresql://localhost:5432/studs
 spring.datasource.username=${pg_user}
 spring.datasource.password=${pg_pass}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.schema=${pg_schema}
+# Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-# log sql to console
+# data jpa logs sql to console
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 # flyway migrations disabled for tests
