--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=blps
 # Connection to pg
-spring.datasource.url=jdbc:postgresql://localhost:5432/studs
+spring.datasource.url=jdbc:postgresql://localhost:5430/studs
 spring.datasource.username=${pg_user}
 spring.datasource.password=${pg_pass}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -16,3 +16,5 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 # flyway migrations disabled for tests
 spring.flyway.enabled=true
 spring.flyway.schemas=${pg_schema}
+spring.flyway.baseline-on-migrate = true
+spring.flyway.baseline-version = 0
