--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,15 @@ spring.flyway.enabled=true
 spring.flyway.schemas=${pg_schema}
 spring.flyway.baseline-on-migrate = true
 spring.flyway.baseline-version = 0
+
+assemblyai.api.key=0723a0e3fef64629ab70d6a2c6760a98 ${assemlyai_key}
+
+minio.endpoint=http://localhost:9000
+minio.accessKey=${minio_access_key}
+minio.secretKey=${minio_secret_key}
+minio.buckets.videos=videos
+minio.buckets.transcriptions=transcriptions
+
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=10
+spring.task.execution.pool.queue-capacity=25
