--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.flyway.schemas=${pg_schema}
 spring.flyway.baseline-on-migrate = true
 spring.flyway.baseline-version = 0
 
-assemblyai.api.key=0723a0e3fef64629ab70d6a2c6760a98 ${assemlyai_key}
+assemblyai.api.key=${assemlyai_key}
 
 minio.endpoint=http://localhost:9000
 minio.accessKey=${minio_access_key}
