fix: swagger настройки

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,37 @@
 spring.application.name=blps
-# Connection to pg
-spring.datasource.url=jdbc:postgresql://localhost:5430/studs
+# region PG connection
+spring.datasource.url=${pg_url}
 spring.datasource.username=${pg_user}
 spring.datasource.password=${pg_pass}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.schema=${pg_schema}
-# Hibernate settings
+# endregion
+#  region Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-# data jpa logs sql to console
+# endregion
+# region data jpa logs sql to console
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
-# flyway migrations disabled for tests
+# endregion
+# region flyway migrations disabled for tests
 spring.flyway.enabled=true
 spring.flyway.schemas=${pg_schema}
 spring.flyway.baseline-on-migrate = true
 spring.flyway.baseline-version = 0
-
-assemblyai.api.key=${assemlyai_key}
-
-minio.endpoint=http://localhost:9000
+# endregion
+assemblyai.api.key=${assemblyai_key}
+# region minio settings
+minio.endpoint=${minio_url}
 minio.accessKey=${minio_access_key}
 minio.secretKey=${minio_secret_key}
 minio.buckets.videos=videos
 minio.buckets.transcriptions=transcriptions
+# endregion
 
 spring.task.execution.pool.core-size=5
 spring.task.execution.pool.max-size=10
 spring.task.execution.pool.queue-capacity=25
+server.port=${app_port}
