--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.flyway.baseline-on-migrate = true
 spring.flyway.baseline-version = 0
 # endregion
 assemblyai.api.key=${assemblyai_key}
+assemblyai.mock_requests=true
 # region minio settings
 minio.endpoint=${minio_url}
 minio.accessKey=${minio_access_key}
