--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,13 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.schema=${pg_schema}
 # endregion
 
+# region flyway migrations disabled for tests
+spring.flyway.enabled=true
+spring.flyway.schemas=${pg_schema}
+spring.flyway.baseline-on-migrate = true
+spring.flyway.baseline-version = 0
+# endregion
+
 #  region Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
@@ -20,16 +27,6 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #spring.jpa.properties.hibernate.format_sql=true
 # endregion
 
-# region flyway migrations disabled for tests
-spring.flyway.enabled=true
-spring.flyway.schemas=${pg_schema}
-spring.flyway.baseline-on-migrate = true
-spring.flyway.baseline-version = 0
-# endregion
-
-assemblyai.api.key=${assemblyai_key}
-assemblyai.mock_requests=true
-
 # region minio settings
 minio.endpoint=${minio_url}
 minio.accessKey=${minio_access_key}
@@ -38,7 +35,19 @@ minio.buckets.videos=videos
 minio.buckets.transcriptions=transcriptions
 # endregion
 
+# region jta
+spring.jta.enabled=true
+spring.jta.transaction-manager-id=atomikos
+# endregion
+
+# region assemblyai - AI video transcription generator
+assemblyai.api.key=${assemblyai_key}
+assemblyai.mock_requests=true
+# endregion
+
+# region execution
 spring.task.execution.pool.core-size=5
 spring.task.execution.pool.max-size=10
 spring.task.execution.pool.queue-capacity=25
 server.port=${app_port}
+# endregion
