--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=blps
 
 # region PG connection
-spring.datasource.url=${pg_url}
-spring.datasource.username=${pg_user}
-spring.datasource.password=${pg_pass}
+spring.datasource.url=${PG_URL}
+spring.datasource.username=${PG_USER}
+spring.datasource.password=${PG_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.schema=${pg_schema}
+spring.datasource.hikari.schema=${PG_SCHEMA}
 # endregion
 
 # region flyway migrations disabled for tests
 spring.flyway.enabled=true
-spring.flyway.schemas=${pg_schema}
+spring.flyway.schemas=${PG_SCHEMA}
 spring.flyway.baseline-on-migrate = true
 spring.flyway.baseline-version = 0
 # endregion
@@ -28,9 +28,9 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 # endregion
 
 # region minio settings
-minio.endpoint=${minio_url}
-minio.accessKey=${minio_access_key}
-minio.secretKey=${minio_secret_key}
+minio.endpoint=${MINIO_URL}
+minio.accessKey=${MINIO_ACCESS_KEY}
+minio.secretKey=${MINIO_SECRET_KEY}
 minio.buckets.videos=videos
 minio.buckets.transcriptions=transcriptions
 # endregion
@@ -41,13 +41,13 @@ spring.jta.transaction-manager-id=atomikos
 # endregion
 
 # region assemblyai - AI video transcription generator
-assemblyai.api.key=${assemblyai_key}
-assemblyai.mock_requests=true
+assemblyai.api.key=${ASSEMBLY_AI_KEY}
+assemblyai.mock_requests=${ASSEMBLY_AI_MOCK_REQUEST}
 # endregion
 
 # region execution
 spring.task.execution.pool.core-size=5
 spring.task.execution.pool.max-size=10
 spring.task.execution.pool.queue-capacity=25
-server.port=${app_port}
+server.port=${APP_PORT}
 # endregion
