--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+ggml-base.bin
+ggml-large-v3-turbo.bin
 
 ### STS ###
 .apt_generated
