--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,8 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 # region data jpa logs sql to console
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 # endregion
 
 # region minio settings
@@ -40,9 +42,9 @@ spring.jta.enabled=true
 spring.jta.transaction-manager-id=atomikos
 # endregion
 
-# region assemblyai - AI video transcription generator
-assemblyai.api.key=${ASSEMBLY_AI_KEY}
-assemblyai.mock_requests=${ASSEMBLY_AI_MOCK_REQUEST}
+# region transcription
+whisper.model_path=${WHISPER_MODEL_PATH}
+whisper.banned_words_path=${BANNED_WORDS_PATH}
 # endregion
 
 # region execution
@@ -50,4 +52,8 @@ spring.task.execution.pool.core-size=5
 spring.task.execution.pool.max-size=10
 spring.task.execution.pool.queue-capacity=25
 server.port=${APP_PORT}
+# endregion
+
+# region security
+jwt-secret=${JWT_SECRET}
 # endregion
