--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,19 @@
 APP_PORT=8080
 
-MINIO_URL=http://localhost:9000
+MINIO_URL=http://minio:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 
-PG_URL=jdbc:postgresql://localhost:5432/your_db
+PG_URL=jdbc:postgresql://postgres:5432/your_db
 PG_SCHEMA=public
 PG_USER=postgres
 PG_PASS=postgres
+PG_DB=your_db
 
 RABBIT_URL=
 RABBIT_USER=
 RABBIT_PASS=
 
 BANNED_WORDS_PATH=banned_en.txt
+WHISPER_MODEL_PATH=ggml-base.bin
 JWT_SECRET=<your_secret>
