--- a/services/transcriptions/.env.example
+++ b/services/transcriptions/.env.example
@@ -1,11 +1,15 @@
-APP_PORT=8080
+MINIO_URL=http://localhost:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
-MINIO_URL=http://localhost:9000
-PG_PASS=postgres
-PG_SCHEMA=public
+
 PG_URL=jdbc:postgresql://localhost:5432/your_db
+PG_SCHEMA=public
 PG_USER=postgres
+PG_PASS=postgres
+
+RABBIT_URL=
+RABBIT_USER=
+RABBIT_PASS=
 
 BANNED_WORDS_PATH=banned_en.txt
 WHISPER_MODEL_PATH=ggml-base.bin
