feat: модель в контейнер
# + fix: api health

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+
+whisper.cpp/
+ffmpeg
 ggml-base.bin
 ggml-large-v3-turbo.bin
 
