--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
     command: ["postgres", "-c", "max_prepared_transactions=16"]
 
   rabbit:
-    image: rabbitmq:4.1.3
+    image: rabbitmq:4.1.3-management
     restart: unless-stopped
     expose:
       - 5672
@@ -56,6 +56,7 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: ${RABBIT_USER}
       RABBITMQ_DEFAULT_PASS: ${RABBIT_PASS}
+      RABBITMQ_DEFAULT_VHOST: ${RABBIT_VHOST}
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "status"]
       interval: 10s
@@ -79,14 +80,16 @@ services:
       APP_PORT: 8080
       MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
       MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
-      MINIO_URL: ${MINIO_URL}
+      MINIO_URL: http://minio:9000
       PG_URL: ${PG_URL}
       PG_SCHEMA: ${PG_SCHEMA}
       PG_USER: ${PG_USER}
       PG_PASS: ${PG_PASS}
-      RABBIT_URL: ${RABBIT_URL}
+      RABBIT_HOST: rabbit
+      RABBIT_PORT: 5672
       RABBIT_USER: ${RABBIT_USER}
-      RABBIT_PATH: ${RABBIT_PATH}
+      RABBIT_PASS: ${RABBIT_PASS}
+      RABBIT_VHOST: ${RABBIT_VHOST}
       BANNED_WORDS_PATH: ${BANNED_WORDS_PATH}
       JWT_SECRET: ${JWT_SECRET}
     healthcheck:
@@ -105,19 +108,22 @@ services:
       - postgres
       - minio
       - rabbit
+      - api
     networks:
       - local
     environment:
       MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
       MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
-      MINIO_URL: ${MINIO_URL}
+      MINIO_URL: http://minio:9000
       PG_URL: ${PG_URL}
       PG_SCHEMA: ${PG_SCHEMA}
       PG_USER: ${PG_USER}
       PG_PASS: ${PG_PASS}
-      RABBIT_URL: ${RABBIT_URL}
+      RABBIT_HOST: rabbit
+      RABBIT_PORT: 5672
       RABBIT_USER: ${RABBIT_USER}
-      RABBIT_PATH: ${RABBIT_PATH}
+      RABBIT_PASS: ${RABBIT_PASS}
+      RABBIT_VHOST: ${RABBIT_VHOST}
       BANNED_WORDS_PATH: ${BANNED_WORDS_PATH}
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
