--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 APP_PORT=8080
 
-MINIO_URL=http://minio:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 
@@ -10,9 +9,9 @@ PG_USER=postgres
 PG_PASS=postgres
 PG_DB=your_db
 
-RABBIT_URL=
-RABBIT_USER=
-RABBIT_PASS=
+RABBIT_USER=rabbitadmin
+RABBIT_PASS=rabbitadmin
+RABBIT_VHOST=/
 
 BANNED_WORDS_PATH=banned_en.txt
 JWT_SECRET=<your_secret>
