--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -9,9 +9,11 @@ PG_SCHEMA=public
 PG_USER=postgres
 PG_PASS=postgres
 
-RABBIT_URL=
+RABBIT_HOST=
+RABBIT_PORT=
 RABBIT_USER=
 RABBIT_PASS=
+RABBIT_VHOST=
 
 BANNED_WORDS_PATH=banned_en.txt
 JWT_SECRET=<your_secret>
