--- a/services/api/src/main/resources/application.properties
+++ b/services/api/src/main/resources/application.properties
@@ -37,6 +37,16 @@ minio.buckets.videos=videos
 minio.buckets.transcriptions=transcriptions
 # endregion
 
+# region rabbit mq
+spring.rabbitmq.host=${RABBIT_HOST}
+spring.rabbitmq.port=${RABBIT_PORT}
+spring.rabbitmq.username=${RABBIT_USER}
+spring.rabbitmq.password=${RABBIT_PASS}
+spring.rabbitmq.virtual-host=${RABBIT_VHOST}
+
+rabbit.queue.transcriptionsQueueName=transcriptionsQueue
+# endregion
+
 # region jta
 spring.jta.enabled=true
 spring.jta.transaction-manager-id=atomikos
