--- a/services/transcriptions/.env.example
+++ b/services/transcriptions/.env.example
@@ -7,9 +7,11 @@ PG_SCHEMA=public
 PG_USER=postgres
 PG_PASS=postgres
 
-RABBIT_URL=
+RABBIT_HOST=
+RABBIT_PORT=
 RABBIT_USER=
 RABBIT_PASS=
+RABBIT_VHOST=
 
 BANNED_WORDS_PATH=banned_en.txt
 WHISPER_MODEL_PATH=ggml-base.bin
