--- a/services/transcriptions/.env.example
+++ b/services/transcriptions/.env.example
@@ -13,7 +13,6 @@ RABBIT_HOST=
 RABBIT_PORT=
 RABBIT_USER=
 RABBIT_PASS=
-RABBIT_VHOST=
 
 BANNED_WORDS_PATH=banned_en.txt
-WHISPER_MODEL_PATH=ggml-base.bin
+WHISPER_MODEL_TYPE=base
