--- a/services/transcriptions/src/main/resources/application.properties
+++ b/services/transcriptions/src/main/resources/application.properties
@@ -28,7 +28,6 @@ spring.rabbitmq.host=${RABBIT_HOST}
 spring.rabbitmq.port=${RABBIT_PORT}
 spring.rabbitmq.username=${RABBIT_USER}
 spring.rabbitmq.password=${RABBIT_PASS}
-spring.rabbitmq.virtual-host=${RABBIT_VHOST}
 
 rabbit.queue.transcriptionsQueueName=transcriptionsQueue
 # endregion
@@ -39,7 +38,7 @@ spring.jta.transaction-manager-id=atomikos
 # endregion
 
 # region transcription
-whisper.model_path=${WHISPER_MODEL_PATH}
+whisper.model_type=${WHISPER_MODEL_TYPE}
 banned_words_path=${BANNED_WORDS_PATH}
 # endregion
 
