--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ PG_DB=your_db
 
 RABBIT_USER=rabbitadmin
 RABBIT_PASS=rabbitadmin
-RABBIT_VHOST=/
 
 BANNED_WORDS_PATH=banned_en.txt
 JWT_SECRET=<your_secret>
+WHISPER_MODEL_TYPE=base
