feat: JCA интеграция с сервисом Hive для модерации комментариев

--- a/services/api/src/main/resources/application.properties
+++ b/services/api/src/main/resources/application.properties
@@ -62,6 +62,14 @@ spring.task.execution.pool.queue-capacity=25
 server.port=${APP_PORT}
 # endregion
 
+
+# region security
+hive.base-url=https://api.thehive.ai
+hive.api.banks.path=/api/v3/hive/text-moderation
+hive.api.key=${HIVE_API_KEY}
+# endregion
+
+
 # region security
 jwt-secret=${JWT_SECRET}
 # endregion
