--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,7 @@ services:
       RABBIT_PASS: ${RABBIT_PASS}
       BANNED_WORDS_PATH: ${BANNED_WORDS_PATH}
       JWT_SECRET: ${JWT_SECRET}
+      HIVE_API_KEY: ${HIVE_API_KEY}
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
       interval: 15s
